Bug 319786 - implement xml:space handling. r=tor,sr=roc