layout/svg/base/src/nsSVGForeignObjectFrame.cpp
@@ -86,6 +86,12 @@ nsSVGForeignObjectFrame::nsSVGForeignObjectFrame(nsStyleContext* aContext)
 {
 }
 
+void nsSVGForeignObjectFrame::Destroy()
+{
+  nsSVGUtils::StyleEffects(this);
+  nsSVGForeignObjectFrameBase::Destroy();
+}
+
 //----------------------------------------------------------------------
 // nsISupports methods
 
